@@ -6,6 +6,7 @@
 	* Added support for conditions in templates
 	* Changed tx_solr_Template to tolerate if viewhelpers could not be loaded
 	* Added support for named loops in tx_solr_Template
+	* Added support for conditions in loops
 
 2010-09-14  Markus Goldbach  <markus.goldbach@dkd.de>
 
